# CPP_Optimization

./: CMakeLists.txt
src/: benchmark_setup_test.cpp  case_study_hot_statements.cpp  case_study_input_output.cpp  case_study_memory_management.cpp  case_study_search_sort.cpp  case_study_strings.cpp
